--- a/boilerplate/build.gradle
+++ b/boilerplate/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id 'org.graalvm.buildtools.native' version '0.10.2'
 }
 
-group = 'com.augustotimm.boilerplate'
+group = 'com.augustotimm'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -34,7 +34,6 @@ dependencies {
 	implementation 'org.springframework.modulith:spring-modulith-starter-core'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
