added postgresdb on docker-compose file

--- a/boilerplate/compose.yaml
+++ b/boilerplate/compose.yaml
@@ -1,1 +1,10 @@
 services:
+   db:
+    image: postgres:14
+    restart: always
+    environment:
+      POSTGRES_USER: 'root'
+      POSTGRES_PASSWORD: 'root'
+      POSTGRES_DB: hrtools
+    ports:
+      - '5432:5432'
