--- a/boilerplate/src/main/java/com/augustotimm/resources/application.properties
+++ b/boilerplate/src/main/java/com/augustotimm/resources/application.properties
@@ -1,2 +1,11 @@
 spring.application.name=boilerplate
 spring.docker.compose.enabled=false
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/boilerplate
+spring.datasource.jdbc-url=${spring.datasource.url}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.platform=postgres
+spring.datasource.username=root
+spring.datasource.password=root
+flyway.user=root
+flyway.password=root
