--- a/boilerplate/build.gradle
+++ b/boilerplate/build.gradle
@@ -3,10 +3,13 @@ plugins {
 	id 'org.springframework.boot' version '3.3.1'
 	id 'io.spring.dependency-management' version '1.1.5'
 	id 'org.graalvm.buildtools.native' version '0.10.2'
+	id 'org.flywaydb.flyway' version '6.4.3'
 }
 
 group = 'com.augustotimm'
 version = '0.0.1-SNAPSHOT'
+compileJava.options.fork = true
+compileJava.options.forkOptions.executable = '/$HOME/.asdf/installs/java/openjdk-17.0.2/'
 
 java {
 	toolchain {
@@ -40,6 +43,8 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.flywaydb:flyway-core:6.4.3'
+	runtimeOnly 'org.postgresql:postgresql'
 }
 
 dependencyManagement {
@@ -50,4 +55,10 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+
+flyway {
+  url = 'jdbc:postgresql://localhost:5432/boilerplate?user=root&password=root'
+  locations = ['filesystem:./src/main/resources/db/migration']
 }
