--- a/boilerplate/gradle/wrapper/gradle-wrapper.properties
+++ b/boilerplate/gradle/wrapper/gradle-wrapper.properties
@@ -5,3 +5,4 @@ networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+rg.gradle.java.home=/$HOME/.asdf/installs/java/openjdk-17.0.2/
